egypt can't field them & they already landslide

--- a/GFM/localisation/00_HPM_decisions.csv
+++ b/GFM/localisation/00_HPM_decisions.csv
@@ -204,7 +204,8 @@ rally_tribesmen2_desc;A portion of our people leave a nomadic lifestyle with bit
 rally_tribesmen3;Rally Tribesmen;;;;;;;;;;;;;
 rally_tribesmen3_desc;A portion of our people leave a nomadic lifestyle with bits of a centuries old warrior culture. By reaching to these people and rallying them to our cause, we can raise a much greater army to fulfill our country's destiny.;;;;;;;;;;;;;
 rally_tribesmen4;Rally Tribesmen;;;;;;;;;;;;;
-rally_tribesmen4_desc;A portion of our people leave a nomadic lifestyle with bits of a centuries old warrior culture. By reaching to these people and rallying them to our cause, we can raise a much greater army to fulfill our country's destiny.;;;;;;;;;;;;;show_faq_title;Show FAQ;;;;;;;;;;;;;
+rally_tribesmen4_desc;A portion of our people leave a nomadic lifestyle with bits of a centuries old warrior culture. By reaching to these people and rallying them to our cause, we can raise a much greater army to fulfill our country's destiny.;;;;;;;;;;;;;
+show_faq_title;Show FAQ;;;;;;;;;;;;;
 show_faq_desc;Some aspects of GFM can be a bit confusing at first, which is why we have set up this handy FAQ page for you! Click this decision if you haven't already.;;;;;;;;;;;;;
 enable_options_title;Show 'Options' Decisions;;;;;;;;;;;;;
 enable_options_desc;This decision shows all optional decisions to tweak and change the game's behavior from vanilla GFM. This, along with all decisions it enables, will disappear January 1st 1837 to reduce clutter, so you have a year in-game to pick and choose what you want. Once a tweak is chosen, you can't disable it anymore, so if you misclick you need to edit your save or start a new game.;;;;;;;;;;;;;
