--- a/GFM/localisation/SarifLocContributions.csv
+++ b/GFM/localisation/SarifLocContributions.csv
@@ -217,3 +217,8 @@ the_colombian_savanna_desc;The Colombian Savannas is a region that is located so
 6422038_desc;\n\nAfter Colombia proclaimed the restoration of our state into their union, several Brazilians living in our borders with Brazil started to panic. They don't want to be part of Colombia, so as soon as Colombia invaded our territory, the proclaimed the free Independent State of Ladário, proclaiming that they don't want to be Colombians and if we can't stop them, they shall part aways from us.;;;;;;;;;;;;;
 6422040_desc;\n\nAfter Bolivia declared independence from us and our declaration to integrate the department of Bolivar in our nation, the city of Ladario (which has taken away from Brazil after the Amazon war) in fear of being integrated into our nation, has isolated themselves from the rest of Bolivia. The citizens then soon proclaimed the Free independent state of Ladario, pledging allegiance to their Brazilian identity and to the Brazilian nation. And if things couldn't get any worse, the government of Brazil has granted protection to this new independent state.;;;;;;;;;;;;;
 MGO_prov_gov_conservative;Independent State of Ladário;;;;;;;;;;;;;;
+GCO_conservative_2;Partido Bogotano;;;;;;;;;;;;;
+GCO_conservative_3;Partido Capitalista Liberal;;;;;;;;;;;;;
+GCO_liberal_2;Partido Monagato;;;;;;;;;;;;;
+GCO_liberal_3;Partido Liberalista Secular;;;;;;;;;;;;;
+ECU_reactionary_2;Partido Reactionario;;;;;;;;;;;;;
