making AI GCO less militarian

--- a/GFM/localisation/SarifLocContributions.csv
+++ b/GFM/localisation/SarifLocContributions.csv
@@ -222,3 +222,4 @@ GCO_conservative_3;Partido Capitalista Liberal;;;;;;;;;;;;;
 GCO_liberal_2;Partido Monagato;;;;;;;;;;;;;
 GCO_liberal_3;Partido Liberalista Secular;;;;;;;;;;;;;
 ECU_reactionary_2;Partido Reactionario;;;;;;;;;;;;;
+6432011_desc;\n\nColombia has always been militarian, it always been this way since our independence due to threats of another reconquista or military conflics with our neighbors. Now that cuba and Puerto Rico is now on our possession and crushed the Brazilian has been crushed into submission, it's time for this country to focus once again in things that matter the most: Our Industry. But doing so will slow the army and the navy down.;;;;;;;;;;;;;
