slight prov changes, iraq adjusts not done

--- a/GFM/localisation/00_GFM_Terrains.csv
+++ b/GFM/localisation/00_GFM_Terrains.csv
@@ -426,7 +426,7 @@ tblisi;Montane Grassland;;;;;;;;;;;;;
 erivan;Grassland Hills;;;;;;;;;;;;;
 baku;Steppe;;;;;;;;;;;;;
 jerusalem;Grassland Hills;;;;;;;;;;;;;
-baghdad;Grassland;;;;;;;;;;;;;
+baghdad;Farmlands;;;;;;;;;;;;;
 damascus;Steppe;;;;;;;;;;;;;
 lvov;Grassland Hills;;;;;;;;;;;;;
 krakow;Farmlands;;;;;;;;;;;;;
@@ -1428,7 +1428,7 @@ isla_margarita;Small Island;;;;;;;;;;;;;
 kano;Grassland;;;;;;;;;;;;;
 kaosiung;Jungle Farmlands;;;;;;;;;;;;;
 khasab;Semi-Desert Mountains;;;;;;;;;;;;;
-kut_iraq;Grassland;;;;;;;;;;;;;
+kut_iraq;Farmlands;;;;;;;;;;;;;
 leon_nicaragua;Grassland Hills;;;;;;;;;;;;;
 lopburi;Floodplain Farmlands;;;;;;;;;;;;;
 maldonado;Farmlands;;;;;;;;;;;;;
