--- a/GFM/localisation/LocMergeFile.csv
+++ b/GFM/localisation/LocMergeFile.csv
@@ -538,7 +538,7 @@ form_gran_colombia_desc;Gran Colombia was a political federation established in 
 GCO_conservative;Partido Centralista;Parti centraliste;Partido Zentralist;;Partido Centralista;;;;;;;;;
 GCO_liberal;Partido Federalista;Parti fédéraliste;Partido Föderalistische;;Partido Federalista;;;;;;;;;
 GCO_radical;Partido Radical;Parti radical;Partido Radical;;Partido Radical;;;;;;;;;
-GCO_reactionary;Partido Traditionalista;Parti traditionaliste;Partido Traditionalist;;Partido Traditionalista;;;;;;;;;
+GCO_reactionary;Partido Retrograda;Parti traditionaliste;Partido Traditionalist;;Partido Retrograda;;;;;;;;;
 GCO_socialist;Partido Socialista Revolucionario;Parti révolutionnaire socialiste;Partido Sozialistische Revolutionäre;;Partido Revolucionario Socialista;;;;;;;;;
 arab;Arab;arabe;Arabien;;;;;;;;;;;
 form_arabia_title;Form Arabia;Formez l'Arabie;Gründe Arabien;;;;;;;;;;;
