--- a/GFM/localisation/housedivided2_3.csv
+++ b/GFM/localisation/housedivided2_3.csv
@@ -130,7 +130,7 @@ form_gran_colombia_desc;Gran Colombia was a political federation established in 
 GCO_conservative;Partido Centralista;Parti centraliste;Partido Zentralist;;Partido Centralista;;;;;;;;;x
 GCO_liberal;Partido Federalista;Parti fédéraliste;Partido Föderalistische;;Partido Federalista;;;;;;;;;x
 GCO_anarcho_liberal;Partido Radical;Parti radical;Partido Radical;;Partido Radical;;;;;;;;;x
-GCO_reactionary;Partido Traditionalista;Parti traditionaliste;Partido Traditionalist;;Partido Traditionalista;;;;;;;;;x
+GCO_reactionary;Partido Retrograda;Parti traditionaliste;Partido Traditionalist;;Partido Retrograda;;;;;;;;;x
 GCO_socialist;Partido Socialista Revolucionario;Parti révolutionnaire socialiste;Partido Sozialistische Revolutionäre;;Partido Revolucionario Socialista;;;;;;;;;x
 GCO_communist;Partido Communist;Parti communiste;Partido Communist;;Partido Comunista;;;;;;;;;x
 GCO_fascist;Partido Fascist;Parti fasciste;Partido Fascist;;Partido Fascista;;;;;;;;;x
