--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -3016,13 +3016,13 @@ centralize_kurdistan_fr_desc;With the fall of Bohtan and the pacification of the
 form_iraq_title;Form Iraq;;;;;;;;;;;;;
 form_iraq_desc;Iraq al-Arabi has been disunited for far too long. With the great cities of Iraq under our control, we can finally unite Iraq and bring to it a new golden age!;;;;;;;;;;;;;
 claim_khuzestan_title;Claim Khuzestan;;;;;;;;;;;;;
-claim_khuzestan_desc;The lands east of the Shatt al-Arabi have been populated by Arabs for centuries, and thinking that it is separate from Iraq al-Arabi is now outdated. We must claim Arabestan and fix this injustice once and for all.;;;;;;;;;;;;;
+claim_khuzestan_desc;§RGain 4 infamy§! The lands east of the Shatt al-Arabi have been populated by Arabs for centuries, and thinking that it is separate from Iraq al-Arabi is now outdated. We must claim Arabestan and fix this injustice once and for all.;;;;;;;;;;;;;
 claim_jazira_title;Claim the Caliphal Province of al-Jazira;;;;;;;;;;;;;
-claim_jazira_desc;al-Jazira and its capital, al-Mawshil, have long been closely tied to Iraq al-Arabi, and most of the region is populated by Arabs or has an Arab minority. As we seek to expand, the only logical choice is to do so into Jazira.;;;;;;;;;;;;;
+claim_jazira_desc;§RGain 7.5 infamy§! al-Jazira and its capital, al-Mawshil, have long been closely tied to Iraq al-Arabi, and most of the region is populated by Arabs or has an Arab minority. As we seek to expand, the only logical choice is to do so into Jazira.;;;;;;;;;;;;;
 claim_syria_title;Claim Syria;;;;;;;;;;;;;
-claim_syria_desc;As we expand westward, we find the nation of Syria, between the Sinai Peninsula and Adana. As we seek to find natural borders for our nation, the Levant and the Fertile Crescent fit our goals and share our religion, culture, and language.;;;;;;;;;;;;;
+claim_syria_desc;§RGain 12.5 infamy§! As we expand westward, we find the nation of Syria, between the Sinai Peninsula and Adana. As we seek to find natural borders for our nation, the Levant and the Fertile Crescent fit our goals and share our religion, culture, and language.;;;;;;;;;;;;;
 claim_iraq_persia_title;Claim Iraq-i Ajami;;;;;;;;;;;;;
-claim_iraq_persia_desc;The name 'Iraq' comes from the times of the Seljuk Turks, when they ruled both Iraq proper and Jibal - thus, they were addressed as 'sultan al-Iraq.' Following the Mongol invasions, the name Jibal became outdated, and it became known as Iraq-i Ajami, as opposed to Iraq-i Arabi. Now that we are a power to be reckoned with, we can unify the two Iraqs into one nation in honor of the great empires before us.;;;;;;;;;;;;;
+claim_iraq_persia_desc;§RGain 12.5 infamy§! The name 'Iraq' comes from the times of the Seljuk Turks, when they ruled both Iraq proper and Jibal - thus, they were addressed as 'sultan al-Iraq.' Following the Mongol invasions, the name Jibal became outdated, and it became known as Iraq-i Ajami, as opposed to Iraq-i Arabi. Now that we are a power to be reckoned with, we can unify the two Iraqs into one nation in honor of the great empires before us.;;;;;;;;;;;;;
 irq_accept_kurds_title;Embrace the Kurdish Minority;;;;;;;;;;;;;
 irq_accept_kurds_desc;The Kurds are an integral part of Iraq, being a significant part of our population and prominent in cities such as Dijarbekir or Mosul. As we seek to integrate our new lands into our state, we must accept the Kurds as fellow first-class citizens.;;;;;;;;;;;;;
 irq_accept_lurish_title;Embrace the Lurish Minority;;;;;;;;;;;;;
