syria accepting syriacs, eng influence, less aru

--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -3034,3 +3034,5 @@ irq_accept_persian_title;Embrace the Persian Minority;;;;;;;;;;;;;
 irq_accept_persian_desc;With the recent takeover of Iraq-i Ajami, we have annexed multiple regions with a Persian majority. As we seek to integrate Iraq-i Ajami into our nation, it is only logical that we accept them as first-class citizens.;;;;;;;;;;;;;
 ASKFORPROTECTIONKHZ;The British have been at war with the Qajars for some days now, and our position in the Persian Gulf is all but safe from them. As the alliances shift throughout the region, we may have no choice but to declare ourselves a vassal of the Qajars...;;;;;;;;;;;;;
 ASKFORPROTECTIONKHZPER;Arabestan, worried about a British invasion, has asked for our protection. We have long sought to annex Arabestan into our state, but making them a vassal could be beneficial to us long-term and help us defend against the British.;;;;;;;;;;;;;
+syr_accept_syriac_title;Embrace the Syriac Minority;;;;;;;;;;;;;
+syr_accept_syriac_desc;Our state has significant Christian minorities, namely the Assyrians and Syriacs. After having declared freedom of religion in our state, we must accept them as first-class citizens.;;;;;;;;;;;;;
