--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -1139,10 +1139,10 @@ GUY_reactionary;National Party of Suriname;;;;;;;;;;;;;
 GUY_radical;Party for Democracy and Development through Unity;;;;;;;;;;;;;
 GUY_fascist;Fascist Party of Suriname;;;;;;;;;;;;;
 GXI_presidential_dictatorship;Guangxi Clique;Clique de Kwangsi;Kwangsi-Clique;;;;;;;;;;;
-HAL_absolute_monarchy;Jabal Shammar;;;;;;;;;;;;;
-HAL_prussian_constitutionalism;Jabal Shammar;;;;;;;;;;;;;
-HAL_hms_government;Jabal Shammar;;;;;;;;;;;;;
-HAL;Ha'il;;;;;;;;;;;;;
+HAL_absolute_monarchy;The Emirate of Jabal Shammar;;;;;;;;;;;;;
+HAL_prussian_constitutionalism;The Emirate of Jabal Shammar;;;;;;;;;;;;;
+HAL_hms_government;The Emirate of Jabal Shammar;;;;;;;;;;;;;
+HAL;The Emirate of Ha'il;;;;;;;;;;;;;
 HAL_ADJ;Haili;;;;;;;;;;;;;
 HAL_absolute_monarchy_ADJ;Rashidi;;;;;;;;;;;;;
 HAL_prussian_constitutionalism_ADJ;Rashidi;;;;;;;;;;;;;
@@ -1610,9 +1610,9 @@ MRU_absolute_monarchy;Maritime Union;;;;;;;;;;;;;
 MRU_prussian_constitutionalism;Maritime Union;;;;;;;;;;;;;
 MRU_hms_government;Maritime Union;;;;;;;;;;;;;
 MRU_ADJ;Maritime;;;;;;;;;;;;;
-NEJ_absolute_monarchy;Nejd;;;;;;;;;;;;;
-NEJ_prussian_constitutionalism;Nejd;;;;;;;;;;;;;
-NEJ_hms_government;Nejd;;;;;;;;;;;;;
+NEJ_absolute_monarchy;The Emirate of Nejd;;;;;;;;;;;;;
+NEJ_prussian_constitutionalism;The Emirate of Nejd;;;;;;;;;;;;;
+NEJ_hms_government;The Emirate of Nejd;;;;;;;;;;;;;
 NEJ_absolute_monarchy_ADJ;Saudi;;;;;;;;;;;;;
 NEJ_prussian_constitutionalism_ADJ;Saudi;;;;;;;;;;;;;
 NEJ_hms_government_ADJ;Saudi;;;;;;;;;;;;;
