--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -512,7 +512,7 @@ PROV3254;Bückeburg;;;;;;;;;;;;;
 PROV3255;Gera;;;;;;;;;;;;;
 PROV3256;Sondershausen;;;;;;;;;;;;;
 PROV3257;Waldeck;;;;;;;;;;;;;
-PROV3258;Turbat;;;;;;;;;;;;;
+PROV3258;Kech;;;;;;;;;;;;;
 PROV3259;Jadegebiet;;;;;;;;;;;;;
 PROV3260;Sado;;;;;;;;;;;;;
 PROV3261;Pescara;;;;;;;;;;;;;
