--- a/GFM/localisation/0000_IranRework.csv
+++ b/GFM/localisation/0000_IranRework.csv
@@ -1,6 +1,6 @@
 PER_absolute_monarchy;Qajar Empire;;;;;;;;;;;;;
 PER_absolute_monarchy_ADJ;Qajar;;;;;;;;;;;;;
-PER_prussian_constitutionalism;Sublime State of Iran;;;;;;;;;;;;;
+PER_prussian_constitutionalism;Guarded Domains of Iran;;;;;;;;;;;;;
 PER_prussian_constitutionalism_ADJ;Persian;;;;;;;;;;;;;
 PER_hms_government;Sublime State of Iran;;;;;;;;;;;;;
 PER_hms_government_ADJ;Iranian;;;;;;;;;;;;;
@@ -123,7 +123,7 @@ PROV1144;Faraj;;;;;;;;;;;;;
 PROV1145;Kafšak-Jâsk;;;;;;;;;;;;;
 PROV1168;Sharjah;;;;;;;;;;;;;
 PROV1204;Ashqabad;;;;;;;;;;;;;
-PROV1206;Amul;;;;;;;;;;;;;
+PROV1206;Çarjew;;;;;;;;;;;;;
 PROV1207;Dushanbe Qurghon;;;;;;;;;;;;;
 PROV1208;Baluk-Barai;;;;;;;;;;;;;
 PROV1211;Qonduz;;;;;;;;;;;;;
