Khorasan in Rebellion + 1833 Siege of Herat content

--- a/GFM/localisation/000_persia_map_countries.csv
+++ b/GFM/localisation/000_persia_map_countries.csv
@@ -88,6 +88,8 @@ KKP_presidential_dictatorship_ADJ;Karakalpak;;;;;;;;;;;;;
 KKP_proletarian_dictatorship_ADJ;Karakalpak;;;;;;;;;;;;;
 KHR_ADJ;Khorasani;Khorasani;Khorasani;;;;;;;;;;;
 KHR;Khorasan;Khorasan;Khorasan;;;;;;;;;;;
+KHR_prov_gov_conservative;Qaraei;;;;;;;;;;;;;
+KHR_prov_gov_conservative_ADJ;Qaraei;;;;;;;;;;;;;
 KHR_proletarian_dictatorship;Khorasan Republic;Khorasan Republic;Khorasan Republic;;;;;;;;;;;
 KHR_presidential_dictatorship;Khorasan Republic;Khorasan Republic;Khorasan Republic;;;;;;;;;;;
 KHR_parliamentary_republic;Khorasan Republic;Khorasan Republic;Khorasan Republic;;;;;;;;;;;
