--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -219,7 +219,7 @@ PROV906;As-Suwayda;;;;;;;;;;;;;
 PROV910;Azraq;;;;;;;;;;;;;
 PROV914;Tarabulus;;;;;;;;;;;;;
 PROV925;Sulaymania;;;;;;;;;;;;;
-PROV928;Rewanduz;;;;;;;;;;;;;
+PROV928;Hewlêr;;;;;;;;;;;;;
 PROV937;Pruzhany;;;;;;;;;;;;;
 PROV939;Pinsk;;;;;;;;;;;;;
 PROV940;Brest-Litovsk;;;;;;;;;;;;;
