--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -9368,7 +9368,7 @@ PROV921;Beersheba;Beersheba;Beersheba;;Beersheba;;;;;;;;;
 PROV922;ash-Sheykh Zuwayd;al-Shaykh Zuayd;al-Shaykh Zuayd;;al-Shaykh Zuayd;;;;;;;;;
 PROV923;Mosul;Mossoul;Mosul;;Mosul;;;;;;;;;
 PROV926;Baghdad;Bagdad;Baghdad;;Bagdad;;;;;;;;;
-PROV927;Rewanduz;Rewanduz;Rewanduz;;Rewanduz;;;;;;;;;
+PROV927;Rewandiz;Rewanduz;Rewanduz;;Rewanduz;;;;;;;;;
 PROV929;Abu Kamal;Abu Kamal;Abu Kamal;;Abu Kamal;;;;;;;;;
 PROV930;Kut;Kut;Kut;;Kut;;;;;;;;;
 PROV931;Rutbah;Rutbah;Rutbah;;Rutbah;;;;;;;;;
