kurdish tags contained

--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -3036,3 +3036,6 @@ ASKFORPROTECTIONKHZ;The British have been at war with the Qajars for some days n
 ASKFORPROTECTIONKHZPER;Arabestan, worried about a British invasion, has asked for our protection. We have long sought to annex Arabestan into our state, but making them a vassal could be beneficial to us long-term and help us defend against the British.;;;;;;;;;;;;;
 syr_accept_syriac_title;Embrace the Syriac Minority;;;;;;;;;;;;;
 syr_accept_syriac_desc;Our state has significant Christian minorities, namely the Assyrians and Syriacs. After having declared freedom of religion in our state, we must accept them as first-class citizens.;;;;;;;;;;;;;
+vassal_independence_double_title;Become Independent from $OVERLORD$;;;;;;;;;;;;;
+vassal_independence_double_desc;We must become independent from the nation that oppress us! Our current situation is politically complicated, as we are a vassal of a vassal, but two enemies aren't enough to stop our need for independence.;;;;;;;;;;;;;
+DECLARESINDEPENDENCESECONDVASSAL;$FROMCOUNTRY$ has decided to declare independence from us, and a declaration of war has been issued to us and our overlord.;;;;;;;;;;;;;
