--- a/GFM/localisation/000_persia_map_countries.csv
+++ b/GFM/localisation/000_persia_map_countries.csv
@@ -88,6 +88,12 @@ KKP_presidential_dictatorship_ADJ;Karakalpak;;;;;;;;;;;;;
 KKP_proletarian_dictatorship_ADJ;Karakalpak;;;;;;;;;;;;;
 KHR_ADJ;Khorasani;Khorasani;Khorasani;;;;;;;;;;;
 KHR;Khorasan;Khorasan;Khorasan;;;;;;;;;;;
+KHR_absolute_empire;The Afshar Empire;;;;;;;;;;;;;
+KHR_semi_constitutional_empire;The Afshar Empire;;;;;;;;;;;;;
+KHR_constitutional_empire;The Guarded Domains of Iran;;;;;;;;;;;;;
+KHR_absolute_empire_ADJ;Afsharid;;;;;;;;;;;;;
+KHR_semi_constitutional_empir_ADJe;Afsharid;;;;;;;;;;;;;
+KHR_constitutional_empir_ADJe;Iranian;;;;;;;;;;;;;
 KHR_prov_gov_conservative;Qaraei;;;;;;;;;;;;;
 KHR_prov_gov_conservative_ADJ;Qaraei;;;;;;;;;;;;;
 KHR_proletarian_dictatorship;Khorasan Republic;Khorasan Republic;Khorasan Republic;;;;;;;;;;;
