--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -1764,6 +1764,7 @@ PAR_conservative_2;Popolari;Popolari;Popolari;;Pop olari;;;;;;;;;
 PAR_radical;Radicali;Radicali;Radicali;;Radicali;;;;;;;;;
 PAR_communist;Comunisti;Comunisti;Comunisti;;Comunisti;;;;;;;;;
 PAR_fascist;Fascisti;Fascisti;Fascisti;;Fascisti;;;;;;;;;
+KHR_conservative;Selsele-ye Shahanshahi;;;;;;;;;;;;;
 PER;Iran;;;;;;;;;;;;;
 PER_ADJ;Iranian;;;;;;;;;;;;;
 PER_absolute_empire;Persia;;;;;;;;;;;;;
