Revolt of Hossein Ali Mirza

--- a/GFM/localisation/0000Sitka.csv
+++ b/GFM/localisation/0000Sitka.csv
@@ -1004,6 +1004,8 @@ KALATCOLLAPSE;\n\nShah Nawaz Khan, a direct descendant of Mahabat Khan who had b
 QAS_absolute_empire;Qashqai Empire;;;;;;;;;;;;;
 QAS_semi_constitutional_empire;Qashqai Empire;;;;;;;;;;;;;
 QAS_constitutional_empire;Qashqai Empire;;;;;;;;;;;;;
+QAS_prov_gov_conservative;Hossein Ali Mirza;;;;;;;;;;;;;
+QAS_prov_gov_conservative_adj;Qajar;;;;;;;;;;;;;
 ostpreussen_rename_title;Rename Ostpreuﬂen;;;;;;;;;;;;;
 ostpreussen_rename_desc;Ostpreuﬂen is rightfully $COUNTRY_ADJ$, and should use $COUNTRY_ADJ$ names.;;;;;;;;;;;;;
 rename_aegean_title;Rename the Aegean Islands;;;;;;;;;;;;;
