--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -124,6 +124,7 @@ AGRESSION_WAR_CONQUEST_ANY_NAME_MEE_MEX;The Rebellion in northwestern Mexico;;;;
 NORMAL_WAR_CONQUEST_ANY_NAME_MEE_MEX;The Rebellion in northwestern Mexico;;;;;;;;;;;;;
 AGRESSION_WAR_CONQUEST_ANY_NAME_PER_KHR;Revolt of Hasan Khan Salar;;;;;;;;;;;;;
 NORMAL_WAR_CONQUEST_ANY_NAME_PER_KHR;Revolt of Hasan Khan Salar;;;;;;;;;;;;;
+NORMAL_WAR_CONQUEST_ANY_NAME_PER_QAS;Revolt of Hossein Ali Mirza;;;;;;;;;;;;;
 AGRESSION_WAR_NAME_REPARATIONS_FRA_MEX;The Pastry War;;;;;;;;;;;;;
 NORMAL_WAR_NAME_REPARATIONS_FRA_MEX;The Pastry War;;;;;;;;;;;;;
 AGRESSION_WAR_NAME_REPARATIONS_BOR_MEX;The Pastry War;;;;;;;;;;;;;
