--- a/GFM/localisation/all_event_descriptions.csv
+++ b/GFM/localisation/all_event_descriptions.csv
@@ -1545,7 +1545,7 @@ EVTDESC18482456;\n\nThe Chikunda, a warrior society, has taken over our entire t
 EVTDESC184824561;\n\nThe Maravi have been taken over by Chikunda warriors, and have laid claim to Songo. Should we give in?;;;;;;;;;;;;;
 EVTDESC18482457;\n\nThe Tswana, in spite of heightened tensions with the arrival of the Boers and Nguni raids, have started migrating westwards.;;;;;;;;;;;;;
 EVTDESC18482458;\n\nThe Songhai have revolted all over our west, and are menacing our lands to their south. Should we retaliate?;;;;;;;;;;;;;
-EVTDESC18482459;\n\nNaser al-Din Shah has been undermining the sovereignty of our vassals to the West, and now has chosen to centralise them.;;;;;;;;;;;;;
+EVTDESC18482459;\n\nNaser ed-Din Shah has been undermining the sovereignty of our vassals to the West, and now has chosen to centralise them.;;;;;;;;;;;;;
 EVTDESC18482460;\n\nQu'aiti has seceded from our state, annexing more than 60% of our territory to them.;;;;;;;;;;;;;
 EVTDESC18482462;\n\nThe Zarma, employed as mercenaries in Dagomba, have moved northwards and annexed part of our lands.;;;;;;;;;;;;;
 EVTDESC18482464;\n\nA party of Nguni have burned down multiple of our towns, and the local Tswana have taken the oportunity to raid our towns and commit massacres.;;;;;;;;;;;;;
