--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -9510,7 +9510,7 @@ PROV1128;Arak;Arak;Arak;;Arak;;;;;;;;;
 PROV1130;Îazd;Yazd;Yazd;;Yazd;;;;;;;;;
 PROV1131;Huwayzah;Hoveyzeh;Hoveyzeh;;Hoveyzeh;;;;;;;;;
 PROV1132;al-Muhammarah;Abadan;Abadan;;Âbâdân;;;;;;;;;
-PROV1133;Dezfûl;Dezful;Dezful;;Dezful;;;;;;;;;
+PROV1133;Sarmasjed;Dezful;Dezful;;Dezful;;;;;;;;;
 PROV1134;Dehkord;Dehkord;Dehkord;;Dehkord;;;;;;;;;
 PROV1136;Bushire;Bushire;Bushire;;Bushire;;;;;;;;;
 PROV1139;Sîrjân;Sirjan;Sirjan;;Sirjan;;;;;;;;;
