--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -3524,6 +3524,21 @@ HAZ_colonial_company;Hazarajat;;;;;;;;;;;;;
 HAZ_ADJ;Hazara;;;;;;;;;;;;;
 LUR;Luristan;;;;;;;;;;;;;
 LUR_ADJ;Luristani;;;;;;;;;;;;;
+LUR_prov_gov_liberal;The Bakhtiar;;;;;;;;;;;;;
+LUR_prov_gov_liberal_ADJ;Bakhtiari;;;;;;;;;;;;;
+LUR_absolute_empire;Poshtkuh;;;;;;;;;;;;;
+LUR_semi_constitutional_empire;Poshtkuh;;;;;;;;;;;;;
+LUR_constitutional_empire;Poshtkuh;;;;;;;;;;;;;
+LUR_absolute_empire_ADJ;Feyli;;;;;;;;;;;;;
+LUR_semi_constitutional_empire_ADJ;Feyli;;;;;;;;;;;;;
+LUR_constitutional_empire_ADJ;Feyli;;;;;;;;;;;;;
+LUR_communist;Tudeh Party of Iran;;;;;;;;;;;;;
+LUR_reactionary;The Ulama;;;;;;;;;;;;;
+LUR_conservative;Dudman-e Feyli;;;;;;;;;;;;;
+LUR_radical;Bazaari Faction;;;;;;;;;;;;;
+LUR_socialist;Hizb-e Socialyist;;;;;;;;;;;;;
+LUR_fascist;SUMKA;;;;;;;;;;;;;
+LUR_liberal;Bakhtiari Tribe;;;;;;;;;;;;;
 KRA_proletarian_dictatorship;Krakow Commune;;;;;;;;;;;;;
 FLC;Fulani Caliphate;;;;;;;;;;;;;
 FLC_constitutional_empire;Fulani Empire;;;;;;;;;;;;;
