Tweaks to the Khorasan Rebellion

--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -492,9 +492,9 @@ KAZ_constitutional_empire;The Kazakh Khanate;;;;;;;;;;;;;
 KAZ_absolute_empire_ADJ;Kazakh;;;;;;;;;;;;;
 KAZ_semi_constitutional_empire_ADJ;Kazakh;;;;;;;;;;;;;
 KAZ_constitutional_empire_ADJ;Kazakh;;;;;;;;;;;;;
-BKY_absolute_monarchy;The Junior Jüz;;;;;;;;;;;;;
-BKY_prussian_constitutionalism;The Junior Jüz;;;;;;;;;;;;;
-BKY_hms_government;The Junior Jüz;;;;;;;;;;;;;
+BKY_absolute_monarchy;The Junior Juz;;;;;;;;;;;;;
+BKY_prussian_constitutionalism;The Junior Juz;;;;;;;;;;;;;
+BKY_hms_government;The Junior Juz;;;;;;;;;;;;;
 BKY_absolute_monarchy_ADJ;Junior Kazakh;;;;;;;;;;;;;
 BKY_prussian_constitutionalism_ADJ;Junior Kazakh;;;;;;;;;;;;;
 BKY_hms_government_ADJ;Junior Kazakh;;;;;;;;;;;;;
