--- a/GFM/localisation/000_persia_map_countries.csv
+++ b/GFM/localisation/000_persia_map_countries.csv
@@ -56,7 +56,7 @@ JAL_reactionary;Alfaya;;;;;;;;;;;;;
 JAV_absolute_monarchy;Yogyakarta Sultanate;;;;;;;;;;;;;
 JAV_prussian_constitutionalism;Yogyakarta Sultanate;;;;;;;;;;;;;
 JAV_hms_government;Yogyakarta Sultanate;;;;;;;;;;;;;
-KAZ_absolute_monarchy;The Middle Jüz;;;;;;;;;;;;;
+KAZ_absolute_monarchy;The Middle Juz;;;;;;;;;;;;;
 KRT;Ka'arta;;;;;;;;;;;;;
 KRT_ADJ;Kaartan;;;;;;;;;;;;;
 KDH_conservative;Royal Faction;Faction royale;Königsfraktion;;;;;;;;;;;
