--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -3966,7 +3966,7 @@ MZR_constitutional_empire;Mazrui;;;;;;;;;;;;;
 MZR_constitutional_empire_ADJ;Mazrui;;;;;;;;;;;;;
 MZR_semi_constitutional_empire;Mazrui;;;;;;;;;;;;;
 MZR_semi_constitutional_empire_ADJ;Mazrui;;;;;;;;;;;;;
-BKY;The Junior Jüz;;;;;;;;;;;;;
+BKY;The Junior Juz;;;;;;;;;;;;;
 BKY_absolute_empire;The Bukey Horde;;;;;;;;;;;;;
 BKY_absolute_empire_ADJ;Kazakh;;;;;;;;;;;;;
 BKY_constitutional_empire;The Bukey Horde;;;;;;;;;;;;;
