fix Shinsengumi revolt

--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -592,6 +592,9 @@ EZO_hms_government;Matsumae;;;;;;;;;;;;;
 EZO_absolute_monarchy_ADJ;Matsumae;;;;;;;;;;;;;
 EZO_prussian_constitutionalism_ADJ;Matsumae;;;;;;;;;;;;;
 EZO_hms_government_ADJ;Matsumae;;;;;;;;;;;;;
+EZO_absolute_empire;Shinsengumi;;;;;;;;;;;;;
+EZO_semi_constitutional_empire;Shinsengumi;;;;;;;;;;;;;
+EZO_constitutional_empire;Shinsengumi;;;;;;;;;;;;;
 EZO_democracy;The Republic of Ezo;;;;;;;;;;;;;
 EZO_presidential_dictatorship;The Republic of Ezo;;;;;;;;;;;;;
 EZO_fascist_dictatorship;The Shogunate;;;;;;;;;;;;;
