--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -4377,7 +4377,7 @@ CRW_absolute_monarchy;Crow;;;;;;;;;;;;;
 PAW;Pawnee;;;;;;;;;;;;;
 PAW_ADJ;Chatiks;;;;;;;;;;;;;
 KSJ;East Kazakhstan;;;;;;;;;;;;;
-KSJ_absolute_monarchy;The Senior Jüz;;;;;;;;;;;;;
+KSJ_absolute_monarchy;The Senior Juz;;;;;;;;;;;;;
 KSJ_ADJ;Senior Kazakh;;;;;;;;;;;;;
 KAZ_proletarian_dictatorship;SSR Kazakhstan;RSS Kazakhstan;SSR Kasachstan;SSR Kazachstan;SSR Kazajstán;RSS Kazaca;SSR Kazahsztán;SSR Kazachstán;SSR Kazahsztán;SSR Kazachstan;SSR Cazaquistão;ÑÑÐ Êàçàõñòàí;SSR Kazakstan;
 KAZ_radical_republic;The Semirechye Republic;;;;;;;;;;;;;
