--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -615,3 +615,4 @@ WAL_colonial_company_4;Valakhiya;;;;;;;;;;;;;
 MOL_colonial_company_4;Moldaviya;;;;;;;;;;;;;
 SIE_colonial_company_4;Transilvaniya;;;;;;;;;;;;;
 WES_colonial_company_2;Westphalie;;;;;;;;;;;;;
+CRI_colonial_company_3;Crimean Regional Government;;;;;;;;;;;;;
