Russian AutDep in Lithuania

--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -126,6 +126,7 @@ UBD_colonial_company_3;Storhertigdömet Livland;;;;;;;;;;;;;
 LAT_colonial_company;Kurlyandskaya Guberniya;;;;;;;;;;;;;
 LAT_colonial_company_3;Hertigdömet Lettland;;;;;;;;;;;;;
 LAT_colonial_company_ADJ;Curonian;;;;;;;;;;;;;
+LIT_colonial_company;Litovskaya Guberniya;;;;;;;;;;;;;
 LIT_colonial_company_3;Furstendömet Litauen;;;;;;;;;;;;;
 EST_colonial_company;Estlyandskaya Guberniya;;;;;;;;;;;;;
 EST_colonial_company_3;Hertigdömet Estland;;;;;;;;;;;;;
