Removed an entire file again (and two decisions)
- Bye, Juneau.txt! Its contents are now in Irredentism.txt
- Added a new decision picture, which two decisions now use
- Karelia is now able to unite with Finland through decision. This decision carries some improvements to the regular unite with xxx decisions, which have been implemented in the others as well, allowing me to delete two decisions I created a long time ago (unite poland and unite greece).

--- a/GFM/localisation/00_HPM_decisions.csv
+++ b/GFM/localisation/00_HPM_decisions.csv
@@ -1454,7 +1454,7 @@ create_rhodesia_desc;The British South Africa Company's administration of what b
 become_poland_title;Jeszcze Polska nie Zginela;;;;;;;;;;;;;
 become_poland_desc;Poland must be reborn! With Warsaw back in our hands, we must take the first step towards uniting all Polish people under a common flag!;;;;;;;;;;;;;
 unite_with_poland_title;Unite with Poland;;;;;;;;;;;;;
-unite_with_poland_desc;Now that Poland has been reborn, the time has come for Krakow to rejoin the motherland.;;;;;;;;;;;;;
+unite_with_poland_desc;Now that Poland has been reborn, the time has come for $COUNTRY$ to rejoin the motherland.;;;;;;;;;;;;;
 galicia_annex_krakow_title;Unite with Galicia;;;;;;;;;;;;;
 galicia_annex_krakow_desc;The Great Powers of the world swim around us like hungry sharks, and our city alone is too small to be safe. Now that the Poles of Galicia have been freed, it would be best for us to come under their protection. Together, we shall not rest until we have liberated the rest of our Polish brethren!;;;;;;;;;;;;;
 krakow_form_galicia_title;Form Galicia-Lodomeria;;;;;;;;;;;;;
