Russian names for Poland and Finland ig
- Plus a few gfx changes

--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -33,7 +33,7 @@ BLC_colonial_company_2;Balouchistan;;;;;;;;;;;;;
 MEW_colonial_company;The Rajputana Agency;;;;;;;;;;;;;
 SLS_colonial_company;Schlesien;;;;;;;;;;;;;
 DZG_colonial_company;Westpreußen;;;;;;;;;;;;;
-POL_colonial_company;Congress Poland;;;;;;;;;;;;;
+POL_colonial_company;Tsaristvo Pols'koye;;;;;;;;;;;;;
 BOH_colonial_company;Protektorat Böhmen-Mähren;;;;;;;;;;;;;
 SCH_colonial_company;Slesvig;;;;;;;;;;;;;
 HOL_colonial_company;Holsten;;;;;;;;;;;;;
@@ -603,6 +603,7 @@ XBI_colonial_company_4;Seihoku Chiho;;;;;;;;;;;;;
 XIN_colonial_company_4;Shinkyo Jichi-Seifu;;;;;;;;;;;;;
 YAK_colonial_company_4;Yakuto Jichi-Ku;;;;;;;;;;;;;
 GRE_colonial_company_4;Regno di Grecia;;;;;;;;;;;;;
+FIN_colonial_company;Velikoye Knyazhestvo Finlyandskoye;;;;;;;;;;;;;
 FIN_colonial_company_4;Hertigdömet Finland;;;;;;;;;;;;;
 KRL_colonial_company_3;Hertigdömet Karelen;;;;;;;;;;;;;
 KHI_colonial_company_4;Khivinskoye Khanstvo;;;;;;;;;;;;;
