--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -33,7 +33,7 @@ BLC_colonial_company_2;Balouchistan;;;;;;;;;;;;;
 MEW_colonial_company;The Rajputana Agency;;;;;;;;;;;;;
 SLS_colonial_company;Schlesien;;;;;;;;;;;;;
 DZG_colonial_company;Westpreußen;;;;;;;;;;;;;
-POL_colonial_company;Tsaristvo Pols'koye;;;;;;;;;;;;;
+POL_colonial_company;Tsarstvo Pol'skoye;;;;;;;;;;;;;
 BOH_colonial_company;Protektorat Böhmen-Mähren;;;;;;;;;;;;;
 SCH_colonial_company;Slesvig;;;;;;;;;;;;;
 HOL_colonial_company;Holsten;;;;;;;;;;;;;
