--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -402,6 +402,7 @@ PTG_colonial_company_2;Nouvelle France;;;;;;;;;;;;;
 PTG_colonial_company_4;Grão-Ducado da Patagônia;;;;;;;;;;;;;
 HAI_colonial_company;Saint Dominic;;;;;;;;;;;;;
 HAI_colonial_company_2;Saint-Domingue;;;;;;;;;;;;;
+HAI_colonial_company_3;Insular Government of Haiti;;;;;;;;;;;;;
 HAI_colonial_company_4;Haití;;;;;;;;;;;;;
 QUE_colonial_company;Province of Quebec;;;;;;;;;;;;;
 QUE_colonial_company_2;Québec;;;;;;;;;;;;;
@@ -530,6 +531,7 @@ CUB_colonial_company_3;Kuba;;;;;;;;;;;;;
 CUB_colonial_company_4;Cuba;;;;;;;;;;;;;
 DOM_colonial_company;East Saint Dominic;;;;;;;;;;;;;
 DOM_colonial_company_2;Saint-Domingue Orientale;;;;;;;;;;;;;
+DOM_colonial_company_3;Insular Government of Santo Domingo;;;;;;;;;;;;;
 DOM_colonial_company_4;Santo Domingo;;;;;;;;;;;;;
 MEX_colonial_company;Commonwealth of Mexico;;;;;;;;;;;;;
 IRE_colonial_company;Irish Free State;;;;;;;;;;;;;
