Calm before the storm

--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -292,6 +292,7 @@ CRI_radical;Taraqqiparvarlar;Faction radicale;Die radikale Fraktion;;La facción 
 CRI_socialist;Milliy Firqa (Sol);Faction socialiste;Die sozialistische Fraktion;;La facción socialista;;;;;;;;;
 CRI_communist;Socialist Firqa;Faction communiste;Die kommunistische Fraktion;;La facción comunista;;;;;;;;;
 CRI_fascist;Ulug Ulus;Faction fasciste;Die faschistische Fraktion;;La facción fascista;;;;;;;;;
+CRI_presidential_dictatorship;Crimean Regional Government;;;;;;;;;;;;;
 cherokee_ultimate_insanity_title;Expand from Coast to Coast;;;;;;;;;;;;;
 cherokee_ultimate_insanity_desc;Since the white man arrived in America, he pushed us constantly in our home, putting the seeds of division amongst us, dividing and conquering us whenever he got the opportunity. No more we, the owners of the Turtle Island, will be pushed by the outsiders as they see fit. The time has come to release the shackles of our brothers on the West Coast and unite ourselves as a single entity against the white man for the final crusade.;;;;;;;;;;;;;
 proclaim_bulgarian_empire_title;Proclaim the Bulgarian Empire;;;;;;;;;;;;;
