--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -80,8 +80,19 @@ LOM_colonial_company;Lombardo-Venetien;;;;;;;;;;;;;
 HDJ_colonial_company;Sharifate of Mecca;;;;;;;;;;;;;
 HDJ_colonial_company_2;Sharifate of Mecca;;;;;;;;;;;;;
 BAN_colonial_company;Freistaat Banat;;;;;;;;;;;;;
-SIE_colonial_company;Siebenburgen;;;;;;;;;;;;;
-SIE_colonial_company_ADJ;Siebenbürger;;;;;;;;;;;;;
+SIE_colonial_company_3;Großfürstentum Siebenbürgen;;;;;;;;;;;;;
+SIE_colonial_company_3_ADJ;Siebenbürger;;;;;;;;;;;;;
+HUN_colonial_company_3;Königreich Ungarn;;;;;;;;;;;;;
+BOH_colonial_company_3;Königreich Böhmen;;;;;;;;;;;;;
+SLO_colonial_company_3;Herzogtum Krain;;;;;;;;;;;;;
+SLV_colonial_company;Upper Hungarian Slovak District;;;;;;;;;;;;;
+SLV_colonial_company_3;Fürstentum Nitra;;;;;;;;;;;;;
+GLM_colonial_company_3;Königreich Galizien und Lodomerien;;;;;;;;;;;;;
+BKV_colonial_company_3;Herzogtum Buchenland ;;;;;;;;;;;;;
+SZK_colonial_company_3;Herzogtum Szeklerland;;;;;;;;;;;;;
+DLM_colonial_company_3;Königreich Dalmatien;;;;;;;;;;;;;
+CRO_colonial_company_3;Königreich Kroatien und Slawonien;;;;;;;;;;;;;
+MRV_colonial_company_3;Markgrafschaft Mähren;;;;;;;;;;;;;
 TRI_colonial_company;Libya;;;;;;;;;;;;;
 TRI_colonial_company_2;Libye;;;;;;;;;;;;;
 TRI_colonial_company_3;Libyen;;;;;;;;;;;;;
