--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -629,6 +629,8 @@ ROM_colonial_company_4;Rumyniya;;;;;;;;;;;;;
 WAL_colonial_company_4;Valakhiya;;;;;;;;;;;;;
 MOL_colonial_company_4;Moldaviya;;;;;;;;;;;;;
 SIE_colonial_company_4;Transilvaniya;;;;;;;;;;;;;
+SAA_colonial_company_2;Saare;;;;;;;;;;;;;
+RHI_colonial_company_2;Protectorat de Rhénanie;;;;;;;;;;;;;
 WES_colonial_company_2;Westphalie;;;;;;;;;;;;;
 CRI_colonial_company;Tavricheskaya;;;;;;;;;;;;;
 CRI_colonial_company_3;Krim-Grenzregierung;;;;;;;;;;;;;
