flags flags flags

--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -374,8 +374,10 @@ IDC_colonial_company_3_ADJ;Hinterindisch;;;;;;;;;;;;;
 IDC_colonial_company_4;Indoshina Hogoryo;;;;;;;;;;;;;
 AMA_colonial_company;Guiana;;;;;;;;;;;;;
 AMA_colonial_company_ADJ;Guianese;;;;;;;;;;;;;
-PRI_colonial_company;Port Rich;;;;;;;;;;;;;
-PRI_colonial_company_4;Puerto Rico;;;;;;;;;;;;;
+PRI_colonial_company;Colony of Puerto Rico;;;;;;;;;;;;;
+PRI_colonial_company_2;Colonie de Porto Rico;;;;;;;;;;;;;
+PRI_colonial_company_3;Insular Government of Porto Rico;;;;;;;;;;;;;
+PRI_colonial_company_4;Capitanía general de Puerto Rico;;;;;;;;;;;;;
 NEN_colonial_company;Dominion of New England;;;;;;;;;;;;;
 NEN_colonial_company_2;Dominion de l'Acadie du Sud;;;;;;;;;;;;;
 NEN_colonial_company_3;Vereinigte Kolonien von Neuengland;;;;;;;;;;;;;
@@ -414,8 +416,8 @@ RIG_colonial_company_2;Guyane;;;;;;;;;;;;;
 PTG_colonial_company;Dominion of New Wales;;;;;;;;;;;;;
 PTG_colonial_company_2;Nouvelle France;;;;;;;;;;;;;
 PTG_colonial_company_4;Grão-Ducado da Patagônia;;;;;;;;;;;;;
-HAI_colonial_company;Saint Dominic;;;;;;;;;;;;;
-HAI_colonial_company_2;Saint-Domingue;;;;;;;;;;;;;
+HAI_colonial_company;Colony of Hispaniola;;;;;;;;;;;;;
+HAI_colonial_company_2;Colonie de Saint-Domingue;;;;;;;;;;;;;
 HAI_colonial_company_3;Insular Government of Haiti;;;;;;;;;;;;;
 HAI_colonial_company_4;Haití;;;;;;;;;;;;;
 QUE_colonial_company;Province of Quebec;;;;;;;;;;;;;
@@ -540,13 +542,13 @@ MTQ_colonial_company_3;Französische Antillen;;;;;;;;;;;;;
 MTQ_colonial_company_4;Antillas francesas;;;;;;;;;;;;;
 NAN_colonial_company_4;Nederlandse Antillen;;;;;;;;;;;;;
 CUB_colonial_company;Dominion of Cuba;;;;;;;;;;;;;
-CUB_colonial_company_2;Cuba;;;;;;;;;;;;;
-CUB_colonial_company_3;Kuba;;;;;;;;;;;;;
-CUB_colonial_company_4;Cuba;;;;;;;;;;;;;
-DOM_colonial_company;East Saint Dominic;;;;;;;;;;;;;
-DOM_colonial_company_2;Saint-Domingue Orientale;;;;;;;;;;;;;
+CUB_colonial_company_2;Colonie de Cuba;;;;;;;;;;;;;
+CUB_colonial_company_3;Insular Government of Cuba;;;;;;;;;;;;;
+CUB_colonial_company_4;Capitanía general de Cuba;;;;;;;;;;;;;
+DOM_colonial_company;Colony of East Hispaniola;;;;;;;;;;;;;
+DOM_colonial_company_2;Estado de Haití Español;;;;;;;;;;;;;
 DOM_colonial_company_3;Insular Government of Santo Domingo;;;;;;;;;;;;;
-DOM_colonial_company_4;Santo Domingo;;;;;;;;;;;;;
+DOM_colonial_company_4;Capitanía general de Santo Domingo;;;;;;;;;;;;;
 MEX_colonial_company;Commonwealth of Mexico;;;;;;;;;;;;;
 IRE_colonial_company;Irish Free State;;;;;;;;;;;;;
 IRE_colonial_company_2;Territoire d'Irlande;;;;;;;;;;;;;
