Bixed a few fugs

--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -3973,7 +3973,7 @@ BKY_constitutional_empire;The Bukey Horde;;;;;;;;;;;;;
 BKY_constitutional_empire_ADJ;Kazakh;;;;;;;;;;;;;
 BKY_semi_constitutional_empire;The Bukey Horde;;;;;;;;;;;;;
 BKY_semi_constitutional_empire_ADJ;Kazakh;;;;;;;;;;;;;
-BKY_prov_gov_liberal;The Adai Uprising;;;;;;;;;;;;;
+BKY_prov_gov_liberal;The Adai;;;;;;;;;;;;;
 BKY_prov_gov_liberal_ADJ;Adai;;;;;;;;;;;;;
 BOI;Boina;;;;;;;;;;;;;
 BOI_ADJ;Boina;;;;;;;;;;;;;
