--- a/GFM/localisation/FlavourMod_wars.csv
+++ b/GFM/localisation/FlavourMod_wars.csv
@@ -273,6 +273,8 @@ NORMAL_WAR_CONQUEST_ANY_NAME_ENG_MUG;The Indian Rebellion;;;;;;;;;;;;;
 AGRESSION_WAR_CONQUEST_ANY_NAME_ENG_MUG;The Indian Rebellion;;;;;;;;;;;;;
 NORMAL_CUT_DOWN_TO_SIZE_NO_INFAMY_WAR_NAME_RUS_KAZ;The Kenesary Rebellion;;;;;;;;;;;;;
 AGRESSION_CUT_DOWN_TO_SIZE_NO_INFAMY_WAR_NAME_RUS_KAZ;The Kenesary Rebellion;;;;;;;;;;;;;
+NORMAL_CUT_DOWN_TO_SIZE_NO_INFAMY_WAR_NAME_RUS_PER;The $ORDER$Russo-Persian War;;;;;;;;;;;;;
+AGRESSION_CUT_DOWN_TO_SIZE_NO_INFAMY_WAR_NAME_RUS_PER;The $ORDER$Russo-Persian War;;;;;;;;;;;;;
 NORMAL_WAR_CONQUEST_ANY_NAME_TUR_GRE;The Greek War of Independence;;;;;;;;;;;;;
 AGRESSION_WAR_CONQUEST_ANY_NAME_TUR_GRE;The Greek War of Independence;;;;;;;;;;;;;
 NORMAL_CONQUEST_ANY_NAME_ENG_EIC;The East India Company Uprising;;;;;;;;;;;;;
